# BR

./: .gitignore  README.md  TESTING_STRATEGY.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_STRUCTURE_VISUAL.md  pyproject.toml  run.py  test_import.py
config/: combat_plans.yaml  combat_profiles.yaml  default.yaml  live_accuracy_regression.yaml  live_dry_run.yaml  live_preview_fast.yaml  live_real_mvp.yaml  live_shadow_session.yaml
data/_tmp_scene_check/: live_spot_scene_1_perception.json  live_spot_scene_2_perception.json  live_spot_scene_3_perception.json  perception_results.jsonl  perception_session_summary.json
data/live_debug/: perception_results.jsonl  perception_session_summary.json
data/telemetry/: botlab.sqlite3
tests/: conftest.py  test_application_ports.py  test_architecture_regression.py  test_battle.py  test_bootstrap.py  test_combat_plan.py  test_decision_engine.py  test_fsm.py  test_golden_path_farming_session.py  test_live_mvp.py  test_main.py  test_observation_preparation_service.py  test_orchestrator.py  test_orchestrator_scenarios.py  test_predictor.py  test_recovery.py  test_retargeting.py  test_scenario_replay.py  test_scheduler.py  test_simulated_combat_plans.py  test_simulated_combat_profiles.py  test_simulated_world_state_provider.py  test_simulation_report.py  test_simulation_runner.py  test_target_acquisition_service.py  test_target_approach_service.py  test_target_engagement_service.py  test_target_interaction_service.py  test_target_validation.py  test_targeting.py  test_telemetry.py  test_types_and_config.py  test_world_model.py
(+1444 files in other folders)
